--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.5.1",
     "country-state-city": "^3.0.1",
     "cross-env": "^7.0.3",
+    "ecommerce": "file:..",
     "overlay-navbar": "^1.2.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
