--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build": "npm install && cd frontend && npm install && npm run build && cd ..",
+    "render-build": "npm install && cd frontend && npm install && npm run build",
     "heroku-postbuild": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
